# PrismLauncher

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  default.nix  flake.nix
.github/workflows/: backport.yml  build.yaml  build.yml  codeql-analysis.yml  trigger_release.yml
buildconfig/: BuildConfig.cpp.in  BuildConfig.h  CMakeLists.txt
cmake/: QtVersionlessBackport.cmake
launcher/: Application.cpp  Application.h  ApplicationMessage.cpp  BaseInstance.cpp  BaseInstance.h  BaseVersionList.cpp  CMakeLists.txt  Commandline.cpp  DesktopServices.cpp  FileSystem.cpp  FileSystem.h  GZip.cpp  InstanceImportTask.cpp  InstanceImportTask.h  InstanceList.cpp  JavaCommon.cpp  Json.cpp  Json.h  LaunchController.cpp  LaunchController.h  LoggedProcess.cpp  LoggedProcess.h  MMCZip.cpp  MMCZip.h  NullInstance.h  RuntimeContext.h  Version.h  VersionProxyModel.cpp  install_prereqs.cmake.in  main.cpp
launcher/icons/: IconList.cpp  MMCIcon.cpp
launcher/java/: JavaChecker.cpp  JavaInstallList.cpp  JavaRuntime.cpp  JavaRuntime.h  JavaUtils.cpp  JavaUtils.h  JavaVersion.cpp  JavaVersion.h
launcher/launch/: LaunchTask.cpp  LaunchTask.h
launcher/minecraft/: AssetsUtils.cpp  Component.cpp  GradleSpecifier.h  LaunchProfile.cpp  LaunchProfile.h  Library.cpp  Library.h  MinecraftInstance.cpp  MinecraftInstance.h  MojangVersionFormat.cpp  OneSixVersionFormat.cpp  PackProfile.cpp  ProfileUtils.cpp  ProfileUtils.h  Rule.cpp  Rule.h  VersionFile.cpp  VersionFile.h  World.cpp  WorldList.cpp
launcher/modplatform/: EnsureMetadataTask.cpp  EnsureMetadataTask.h  ModAPI.h  ModIndex.cpp
launcher/net/: NetJob.h  (+19 more)
libraries/: README.md
libraries/gamemode/: CMakeLists.txt
libraries/gamemode/include/: gamemode_client.h
libraries/rainbow/: CMakeLists.txt
libraries/rainbow/include/: rainbow.h
libraries/rainbow/src/: rainbow.cpp
program_info/: CMakeLists.txt
snap/: snapcraft.yaml
tests/: CMakeLists.txt  Library_test.cpp  Packwiz_test.cpp  ResourceFolderModel_test.cpp  ResourcePackParse_test.cpp  TexturePackParse_test.cpp
(+263 files in other folders)
